# django-centralauth

./: .editorconfig  .gitignore  .python-version  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
centralauth/: __init__.py  compat.py
centralauth/client/: __init__.py  apps.py  backends.py  constants.py  middleware.py  services.py  urls.py  views.py
centralauth/client/management/commands/: sync_perms.py
centralauth/provider/: __init__.py  admin.py  apps.py  models.py  oauth2_backends.py  oauth_urls.py  services.py  urls.py  views.py
centralauth/provider/migrations/: 0001_initial.py  0002_auto_20181107_0932.py  0003_auto_20181114_1350.py  0004_auto_20181120_2331.py
docs/: Makefile  conf.py  index.rst  installation.rst  requirements.txt
docs/api/: centralauth.client.apps.rst  centralauth.client.backends.rst  centralauth.client.constants.rst  centralauth.client.middleware.rst  centralauth.client.rst  centralauth.client.services.rst  centralauth.client.urls.rst  centralauth.client.views.rst  centralauth.provider.admin.rst  centralauth.provider.apps.rst  centralauth.provider.models.rst  centralauth.provider.oauth_urls.rst  centralauth.provider.rst  centralauth.provider.urls.rst  centralauth.provider.views.rst  centralauth.rst  modules.rst
examples/client-example/: manage.py
examples/client-example/clientexample/: apps.py  settings.py  urls.py  wsgi.py
examples/provider-example/: manage.py
examples/provider-example/providerexample/: apps.py  settings.py  urls.py  wsgi.py
tests/: factories.py  settings.py  urls.py
tests/client/: factories.py  test_apps.py  test_backend.py  test_commands.py  test_constants.py  test_middleware.py  test_services.py  test_views.py
tests/integration/: test_authorize_refresh.py  test_initial_roundtrip.py  test_permissions_sync.py  test_perms_sync.py
tests/provider/: test_admin.py  test_backends.py  test_models.py  test_services.py  test_views.py
(+5 files in other folders)
